force-app/main/default/objects/Quote/fields/RLM_Approved_Discount_Pct__c.field-meta.xml
<CustomField>
    <fullName>RLM_Approved_Discount_Pct__c</fullName>
    <description>Header discount percent stamped when the PC was Approved. Demo drift proxy.</description>
    <label>Approved Discount %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>