force-app/main/default/objects/Quote/fields/RLM_Approved_Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>RLM_Approved_Grand_Total__c</fullName>
    <description>Grand total stamped when the PC was Approved. Used to flag Create Order drift.</description>
    <label>Approved Grand Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>