force-app/main/default/objects/Quote/fields/RLM_Blended_Margin__c.field-meta.xml
<CustomField>
    <fullName>RLM_Blended_Margin__c</fullName>
    <description>Blended margin (net vs cost) stamped by the Deal Desk inspect action.</description>
    <label>Blended Margin</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>