force-app/main/default/objects/Quote/fields/RLM_Deal_Health_Flags__c.field-meta.xml
<CustomField>
    <fullName>RLM_Deal_Health_Flags__c</fullName>
    <description>Names-only flags from the last Deal Desk inspect (padding, missing accessories, channel gaps).</description>
    <label>Deal Health Flags</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>