force-app/main/default/objects/Quote/fields/RLM_Deal_Health_Last_Run__c.field-meta.xml
<CustomField>
    <fullName>RLM_Deal_Health_Last_Run__c</fullName>
    <description>When Deal Desk inspect last wrote Deal Health fields on this quote.</description>
    <label>Deal Health Last Run</label>
    <type>DateTime</type>
</CustomField>