force-app/main/default/objects/Quote/fields/RLM_Deal_Health_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>RLM_Deal_Health_Next_Steps__c</fullName>
    <description>Recommended next steps written by the Deal Desk inspect action.</description>
    <label>Deal Health Next Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>