force-app/main/default/objects/Quote/fields/RLM_Deal_Health_Status__c.field-meta.xml
<CustomField>
    <fullName>RLM_Deal_Health_Status__c</fullName>
    <description>Persisted deal-desk inspect status. Written by the Deal Desk inspect action / Deal Health panel.</description>
    <label>Deal Health Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Healthy</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>