force-app/main/default/objects/Quote/fields/RLM_Deal_Motion__c.field-meta.xml
<CustomField>
    <fullName>RLM_Deal_Motion__c</fullName>
    <description>How this quote is meant to close. Chosen on New Quote. Hardware can be Sales Agreement (run-rate) or Quote to order.</description>
    <label>Deal motion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales_Agreement</fullName>
                <label>Sales Agreement (run-rate)</label>
            </value>
            <value>
                <fullName>Quote_To_Order</fullName>
                <label>Quote to order</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>