force-app/main/default/objects/Quote/fields/RLM_Partner_Request__c.field-meta.xml
<CustomField>
    <fullName>RLM_Partner_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when a partner user created this Quote as a Price Concession request.</description>
    <label>Partner PC Request</label>
    <type>Checkbox</type>
</CustomField>