force-app/main/default/objects/Quote/fields/RLM_PC_Compare_Summary__c.field-meta.xml
<CustomField>
    <fullName>RLM_PC_Compare_Summary__c</fullName>
    <description>Desk AI comparison badges: modified / added / unchanged plus justification ref.</description>
    <label>PC Compare Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>