force-app/main/default/objects/Quote/fields/RLM_PC_Justification__c.field-meta.xml
<CustomField>
    <fullName>RLM_PC_Justification__c</fullName>
    <description>Price-concession justification on the quote (replaces the offline PC record / ugliest spreadsheet). Partner price-concession note on the quote.</description>
    <label>PC Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>