force-app/main/default/objects/Quote/fields/RLM_Prior_PC__c.field-meta.xml
<CustomField>
    <fullName>RLM_Prior_PC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Prior Price Concession Quote this revision was cloned from.</description>
    <label>Prior PC</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Successor Price Concessions</relationshipLabel>
    <relationshipName>Successor_PCs</relationshipName>
    <type>Lookup</type>
</CustomField>